--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -334,14 +334,11 @@ body .About::before {
   border-top: 100px solid transparent;
 }
 body .SKills {
+  position: relative;
   padding: 0 10%;
   padding-top: 13rem;
   padding-bottom: 10rem;
   background: linear-gradient(to top, rgb(113, 113, 113), black);
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: center;
 }
 body .SKills #MY {
   text-align: center;
@@ -353,113 +350,136 @@ body .SKills #MY span {
   color: #00b7ff;
 }
 body .SKills .skill-container {
-  margin-top: 6rem;
-  padding: 2rem;
+  max-width: 100%;
+  max-height: 100%;
+  margin-top: 4rem;
   padding-bottom: 4rem;
-  max-width: 118rem;
   border: solid #00b7ff 2px;
-  filter: blur(10%);
   box-shadow: 0 0 5rem #00b7ff;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  overflow: hidden;
 }
-body .SKills .skill-container #lng {
-  width: 100%;
-  display: flex;
-  justify-content: center;
+body .SKills .skill-container #carouselSkills .carousel-item {
+  transition: opacity 1s ease-in-out;
+  opacity: 0;
 }
-body .SKills .skill-container #lng span {
-  font-size: 24pt;
-  font-weight: 700;
-  padding: 1rem 2rem;
-  position: relative;
-  text-align: center;
+body .SKills .skill-container #carouselSkills .carousel-item.active {
+  opacity: 1;
 }
-body .SKills .skill-container .card {
-  cursor: pointer;
-  text-align: center;
-  width: 15rem;
-  margin: 2rem;
-  border-radius: 50%;
-  border: none;
-  transition: all 300mx;
+body .SKills .skill-container #carouselSkills .carousel-control-prev {
+  left: -6%;
 }
-body .SKills .skill-container .card .imageS {
+body .SKills .skill-container #carouselSkills .carousel-control-next {
+  left: 91%;
+}
+body .SKills .skill-container #Scontenedor {
+  margin: auto;
+  margin-bottom: 1rem;
   max-width: 100%;
-  height: 15rem;
   padding: 2rem;
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+}
+body .SKills .skill-container #Scontenedor .card {
+  background: transparent;
+  width: 17rem;
+  margin: 2rem;
+  text-align: center;
+  border: none;
+}
+body .SKills .skill-container #Scontenedor .card .icon {
+  width: 100%;
+  height: 17rem;
+  border-radius: 50%;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   position: relative;
-  border-radius: 50%;
   z-index: 1;
 }
-body .SKills .skill-container .card .imageS i {
-  font-size: 125px;
-  color: white 1rem;
+body .SKills .skill-container #Scontenedor .card .icon i {
+  font-size: 150px;
 }
-body .SKills .skill-container .card .skillbox .card-body {
+body .SKills .skill-container #Scontenedor .card .icon img {
+  width: 15rem;
+}
+body .SKills .skill-container #Scontenedor .card .Stitle {
   position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  color: white;
+  width: 100%;
+  top: 50%;
   opacity: 0;
-  margin-top: -50%;
+  transition: all 0.6s ease-in-out;
 }
-body .SKills .skill-container .card:hover .card-body {
+body .SKills .skill-container #Scontenedor .card .Stitle h5 {
   color: white;
+  font-size: 18pt;
+  font-weight: bold;
+  margin-top: 1rem;
+}
+body .SKills .skill-container #Scontenedor #HTML i {
+  color: #e44d26;
+}
+body .SKills .skill-container #Scontenedor #HTML:hover .icon {
+  cursor: pointer;
+  background-color: #e44d26;
+  box-shadow: 0 0 2rem 0.5rem #fd7b5a;
+  transition: box-shadow 0.5s;
+}
+body .SKills .skill-container #Scontenedor #HTML:hover .icon i {
+  color: white;
+}
+body .SKills .skill-container #Scontenedor #HTML:hover .Stitle {
+  top: 100%;
   opacity: 1;
-  margin-top: 0;
-  transition: all 400ms ease-in-out;
 }
-body .SKills #HTML .imageS i {
-  color: #dd4b24;
+body .SKills .skill-container #Scontenedor #CSS i {
+  color: #2d92cd;
 }
-body .SKills #HTML .imageS:hover {
-  box-shadow: 0 0 4rem #fd5f34;
-  background-color: #dd4b24 !important;
-  transition: 0.5s;
-  transition: box-shadow 0.3s ease-in-out;
+body .SKills .skill-container #Scontenedor #CSS:hover .icon {
+  cursor: pointer;
+  background-color: #2d92cd;
+  box-shadow: 0 0 2rem 0.5rem #3bb3f8;
+  transition: box-shadow 0.5s;
 }
-body .SKills #HTML .imageS:hover i {
+body .SKills .skill-container #Scontenedor #CSS:hover .icon i {
   color: white;
 }
-body .SKills #CSS .imageS i {
-  color: #29a8e0;
+body .SKills .skill-container #Scontenedor #CSS:hover .Stitle {
+  top: 100%;
+  opacity: 1;
 }
-body .SKills #CSS .imageS:hover {
-  box-shadow: 0 0 4rem #2fc0ff;
-  background-color: #29a8e0 !important;
-  transition: 0.5s;
-  transition: box-shadow 0.3s ease-in-out;
+body .SKills .skill-container #Scontenedor #JAVASCRIPT i {
+  color: #f0c02b;
 }
-body .SKills #CSS .imageS:hover i {
+body .SKills .skill-container #Scontenedor #JAVASCRIPT:hover .icon {
+  cursor: pointer;
+  background-color: #f0c02b;
+  box-shadow: 0 0 2rem 0.5rem #ffd042;
+  transition: box-shadow 0.5s;
+}
+body .SKills .skill-container #Scontenedor #JAVASCRIPT:hover .icon i {
   color: white;
 }
-body .SKills #javascript .imageS i {
-  color: #ebba20;
+body .SKills .skill-container #Scontenedor #JAVASCRIPT:hover .Stitle {
+  top: 100%;
+  opacity: 1;
 }
-body .SKills #javascript:hover {
-  box-shadow: 0 0 4rem #ffcf31;
-  background-color: #ebba20 !important;
-  transition: 0.5s;
-  transition: box-shadow 0.3s ease-in-out;
+body .SKills .skill-container #Scontenedor #JAVA:hover .icon {
+  cursor: pointer;
+  background-color: white;
+  box-shadow: 0 0 2rem 0.5rem white;
+  transition: box-shadow 0.5s;
 }
-body .SKills #javascript:hover .imageS i {
-  color: white;
+body .SKills .skill-container #Scontenedor #JAVA:hover .Stitle {
+  top: 100%;
+  opacity: 1;
 }
 
-@keyframes Dtop {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
 @keyframes homeBgtext {
   0%, 10%, 100% {
     background-position: -50rem 0;
