--- a/sass-css/_General-Style.scss
+++ b/sass-css/_General-Style.scss
@@ -279,14 +279,12 @@ body {
 
   .About {
     position: relative;
-    z-index: 1;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    flex-direction: column;
     background: linear-gradient(to top, $bg-secundary, $bg-primary);
-    padding-top: 14rem;
+    position: relative;
+    padding: 0 10%;
+    padding-top: 13rem;
     padding-bottom: 10rem;
+    text-align: center;
 
     .heading {
       font-family: "Kenia", sans-serif;
@@ -299,11 +297,14 @@ body {
     }
 
     .about-content {
-      padding: 2rem;
+      max-width: 100%;
+      max-height: 100%;
+      margin-top: 4rem;
+      padding-bottom: 4rem;
 
       #carouselExample {
         .carousel-item {
-          transition: opacity 1s ease-in-out;
+          transition: opacity 0.4s ease-in-out;
           opacity: 0;
         }
 
@@ -311,84 +312,88 @@ body {
           opacity: 1;
         }
 
-        .carousel-control-prev {
-          left: -13rem;
+        #Acontenedor {
+          margin: auto;
+          margin-bottom: 1rem;
+          max-width: 100%;
+          padding: 2rem;
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
+          align-items: center;
         }
-        .carousel-control-next {
-          left: 99rem;
+
+        .card {
+          max-width: 100rem;
+
+          h1 {
+            font-size: 24pt;
+          }
+
+          .image-container {
+            position: relative;
+            width: 26rem;
+            height: 26rem;
+
+            img {
+              box-shadow: 0 0 10px 5px $main-color;
+              border-radius: 50%;
+              max-width: 225px;
+              height: 225px;
+              transition: 0.5s;
+              margin: 2rem 0;
+            }
+
+            .circle-spin {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%) rotate(0);
+              width: 100%;
+              height: 100%;
+              border-radius: 50%;
+              border-top: 0.3rem solid $bg-secundary;
+              border-bottom: 0.3rem solid $bg-secundary;
+              border-right: 0.3rem solid $main-color;
+              border-left: 0.3rem solid $main-color;
+              animation: RotationAbout 8s linear infinite;
+            }
+
+            .circle-spin2 {
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%) rotate(0);
+              width: 110%;
+              height: 110%;
+              border-radius: 50%;
+              border-top: 0.3rem solid $bg-secundary;
+              border-bottom: 0.3rem solid $bg-secundary;
+              border-right: 0.3rem solid $main-color;
+              border-left: 0.3rem solid $main-color;
+              animation: RotationAbout2 8s linear infinite;
+            }
+          }
+
+          hr {
+            border: none;
+            border-bottom: solid 2px $main-color;
+            border-radius: 15px;
+          }
         }
       }
 
-      .card {
-        max-width: 100rem;
-
-        h1 {
-          font-size: 24pt;
-        }
-
-        .image-container {
-          position: relative;
-          width: 26rem;
-          height: 26rem;
-
-          img {
-            box-shadow: 0 0 10px 5px $main-color;
-            border-radius: 50%;
-            max-width: 225px;
-            height: 225px;
-            transition: 0.5s;
-            margin: 2rem 0;
-          }
-
-          .circle-spin {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) rotate(0);
-            max-width: 100%;
-            max-height: 100%;
-            border-radius: 50%;
-            border-top: 0.3rem solid $bg-secundary;
-            border-bottom: 0.3rem solid $bg-secundary;
-            border-right: 0.3rem solid $main-color;
-            border-left: 0.3rem solid $main-color;
-            animation: RotationAbout 8s linear infinite;
-          }
-
-          .circle-spin2 {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%) rotate(0);
-            max-width: 110%;
-            max-height: 110%;
-            border-radius: 50%;
-            border-top: 0.3rem solid $bg-secundary;
-            border-bottom: 0.3rem solid $bg-secundary;
-            border-right: 0.3rem solid $main-color;
-            border-left: 0.3rem solid $main-color;
-            animation: RotationAbout2 8s linear infinite;
-          }
-        }
-
-        hr {
-          border: none;
-          border-bottom: solid 2px $main-color;
-          border-radius: 15px;
-        }
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-left: 50vw solid black; /* Ancho del triángulo (mitad del ancho de la pantalla) */
+        border-right: 50vw solid black; /* Ancho del triángulo (mitad del ancho de la pantalla) */
+        border-top: 100px solid transparent;
       }
-    }
-
-    &::before {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      width: 0;
-      height: 0;
-      border-left: 50vw solid black; /* Ancho del triángulo (mitad del ancho de la pantalla) */
-      border-right: 50vw solid black; /* Ancho del triángulo (mitad del ancho de la pantalla) */
-      border-top: 100px solid transparent;
     }
   }
 
@@ -414,16 +419,30 @@ body {
       max-width: 100%;
       max-height: 100%;
       margin-top: 4rem;
+      margin-bottom: 8rem;
       padding-bottom: 4rem;
       border: solid $main-color 2px;
       box-shadow: 0 0 5rem $main-color;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
+      text-align: center;
 
-      #carouselSkills {
+      #ln {
+        padding: 2rem;
+        font-size: 22pt;
+        margin: auto;
+        margin-top: 2rem;
+      }
+
+      #FW,
+      #PR {
+        padding: 2rem;
+        font-size: 22pt;
+        margin: auto;
+      }
+
+      #carouselSkills,
+      #carouselSkillsF {
         .carousel-item {
-          transition: opacity 1s ease-in-out;
+          transition: opacity 0.4s ease-in-out;
           opacity: 0;
         }
 
@@ -432,19 +451,17 @@ body {
         }
 
         .carousel-control-prev {
-          left: -6%;
         }
         .carousel-control-next {
-          left: 91%;
         }
       }
-
 
       #Scontenedor {
         margin: auto;
         margin-bottom: 1rem;
         max-width: 100%;
-        padding: 2rem;
+        padding-bottom: 3rem;
+        padding-top: 0;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -473,7 +490,7 @@ body {
               font-size: 150px;
             }
 
-            img{
+            img {
               width: 15rem;
             }
           }
@@ -560,8 +577,28 @@ body {
           }
         }
 
-        #JAVA {
+        #C {
+          filter: grayscale(50%);
           &:hover {
+            filter: grayscale(0%);
+            .icon {
+              cursor: pointer;
+              background-color: rgb(59, 204, 248);
+              box-shadow: 0 0 2rem 0.5rem rgb(59, 204, 248);
+              transition: box-shadow 0.5s;
+            }
+
+            .Stitle {
+              top: 100%;
+              opacity: 1;
+            }
+          }
+        }
+
+        #JAVA {
+          filter: grayscale(50%);
+          &:hover {
+            filter: grayscale(0%);
             .icon {
               cursor: pointer;
               background-color: white;
@@ -575,12 +612,76 @@ body {
             }
           }
         }
+
+        #BOOTSTRAP {
+          i {
+            color: white;
+          }
+          &:hover {
+            .icon {
+              cursor: pointer;
+              background-color: #702df5;
+              box-shadow: 0 0 2rem 0.5rem #af8bf7;
+              transition: box-shadow 0.5s;
+              i {
+                color: white;
+              }
+            }
+
+            .Stitle {
+              top: 100%;
+              opacity: 1;
+            }
+          }
+        }
+
+        #SASS {
+          i {
+            color: #cd669a;
+          }
+          &:hover {
+            .icon {
+              cursor: pointer;
+              background-color: #cd669a;
+              box-shadow: 0 0 2rem 0.5rem #fa9aca;
+              transition: box-shadow 0.5s;
+              i {
+                color: white;
+              }
+            }
+
+            .Stitle {
+              top: 100%;
+              opacity: 1;
+            }
+          }
+        }
+      }
+
+      &::before {
+        content: "";
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        height: 0;
+        border-left: 50vw solid $bg-primary; /* Ancho del triángulo (mitad del ancho de la pantalla) */
+        border-right: 50vw solid $bg-primary; /* Ancho del triángulo (mitad del ancho de la pantalla) */
+        border-top: 100px solid transparent;
       }
     }
   }
+
+  .Projects{
+    position: relative;
+    background: linear-gradient(to top, $bg-secundary, $bg-primary);
+    position: relative;
+    padding: 0 10%;
+    padding-top: 13rem;
+    padding-bottom: 10rem;
+    text-align: center;
+  }
 }
-
-
 
 @keyframes homeBgtext {
   0%,
