--- a/sass-css/Styles.css
+++ b/sass-css/Styles.css
@@ -11,6 +11,7 @@
   outline: none;
   scroll-behavior: smooth;
   font-family: "Poppins",  sans-serif;
+  box-sizing: border-box;
 }
 
 html {
@@ -560,11 +561,175 @@ body .SKills .skill-container::before {
 body .Projects {
   position: relative;
   background: linear-gradient(to top, #295c88, #0e2336);
-  position: relative;
   padding: 0 10%;
   padding-top: 13rem;
   padding-bottom: 10rem;
+}
+body .Projects #MY {
   text-align: center;
+  font-family: "Kenia", sans-serif;
+  font-size: 5rem;
+}
+body .Projects #MY span {
+  font-family: "Kenia", sans-serif;
+  color: #00b7ff;
+}
+body .Projects .projects-container {
+  margin-top: 4rem;
+  display: flex;
+  flex-wrap: wrap;
+}
+body .Projects .projects-container .owl-carousel {
+  display: flex;
+  justify-content: center;
+}
+body .Projects .projects-container .owl-carousel .card {
+  margin: 2rem;
+  color: white;
+  background-image: url("../img/1288491.jpg");
+  background-size: cover;
+  background-position: center;
+  padding: 16rem 0 0;
+  border: none;
+  width: 100%;
+  height: 40rem;
+  max-width: 50ch;
+  transition: all 0.3s ease-in-out;
+  border-radius: 1rem;
+  overflow: hidden;
+}
+body .Projects .projects-container .owl-carousel .card .card-container {
+  border-radius: 1rem;
+  background: linear-gradient(to top, rgb(0, 0, 0), rgba(0, 0, 0, 0.9), rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.4));
+  transform: translateY(82%);
+  transition: transform 0.5s ease-in-out;
+  height: 100%;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body {
+  text-align: center;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body .card-title {
+  font-weight: bold;
+  position: relative;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body .card-title::after {
+  content: "";
+  position: absolute;
+  height: 0.4rem;
+  background-color: #00b7ff;
+  width: 120%;
+  left: -1.5rem;
+  bottom: 0;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body .card-text {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  text-align: justify;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body #Spans {
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  transition-delay: 500ms;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  gap: 0.5rem;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body #Spans span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0.3rem;
+  gap: 0.5rem;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body #Spans #SpHTML {
+  background-color: #e44d26;
+  border-radius: 0.5rem;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body #Spans #SpCSS {
+  background-color: #2d92cd;
+  border-radius: 0.5rem;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body #Spans #SpJavascript {
+  background-color: #f0c02b;
+  border-radius: 0.5rem;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body #Spans #SpBootstrap {
+  background-color: #702df5;
+  border-radius: 0.5rem;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body #Spans #SpSASS {
+  background-color: #cd669a;
+  border-radius: 0.5rem;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body a {
+  position: relative;
+  display: inline-flex;
+  flex-wrap: wrap;
+  margin: 0 0.8rem;
+  margin-top: 2rem;
+  text-decoration: none;
+  justify-content: center;
+  align-items: center;
+  width: 40px;
+  height: 40px;
+  background: transparent;
+  border: solid 0.2rem #00b7ff;
+  border-radius: 50%;
+  transition: 0.5s;
+  transition: box-shadow 0.3s ease;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  transition-delay: 1s;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body a i {
+  font-size: 2.5rem;
+}
+body .Projects .projects-container .owl-carousel .card .card-container .card-body a:hover {
+  box-shadow: 0 0 1rem 0.5rem #00b7ff;
+  color: white;
+}
+body .Projects .projects-container .owl-carousel .card:hover,
+body .Projects .projects-container .owl-carousel .card :focus-within {
+  box-shadow: 0 0 1rem 0.5rem #00b7ff;
+  transform: scale(1.05);
+  cursor: pointer;
+  transition-duration: 0ms;
+}
+body .Projects .projects-container .owl-carousel .card:hover .card-container,
+body .Projects .projects-container .owl-carousel .card:hover .card:focus-within .card-container,
+body .Projects .projects-container .owl-carousel .card :focus-within .card-container,
+body .Projects .projects-container .owl-carousel .card :focus-within .card:focus-within .card-container {
+  transform: translateY(0%);
+  transition-delay: 250ms;
+}
+body .Projects .projects-container .owl-carousel .card:hover .card-container .card-body .card-title::after,
+body .Projects .projects-container .owl-carousel .card:hover .card:focus-within .card-container .card-body .card-title::after,
+body .Projects .projects-container .owl-carousel .card :focus-within .card-container .card-body .card-title::after,
+body .Projects .projects-container .owl-carousel .card :focus-within .card:focus-within .card-container .card-body .card-title::after {
+  transform: scaleX(1);
+}
+body .Projects .projects-container .owl-carousel .card:hover .card-container .card-body .card-text,
+body .Projects .projects-container .owl-carousel .card:hover .card:focus-within .card-container .card-body .card-text,
+body .Projects .projects-container .owl-carousel .card :focus-within .card-container .card-body .card-text,
+body .Projects .projects-container .owl-carousel .card :focus-within .card:focus-within .card-container .card-body .card-text {
+  opacity: 1;
+}
+body .Projects .projects-container .owl-carousel .card:hover .card-container .card-body #Spans,
+body .Projects .projects-container .owl-carousel .card:hover .card:focus-within .card-container .card-body #Spans,
+body .Projects .projects-container .owl-carousel .card :focus-within .card-container .card-body #Spans,
+body .Projects .projects-container .owl-carousel .card :focus-within .card:focus-within .card-container .card-body #Spans {
+  opacity: 1;
+}
+body .Projects .projects-container .owl-carousel .card:hover .card-container .card-body a,
+body .Projects .projects-container .owl-carousel .card:hover .card:focus-within .card-container .card-body a,
+body .Projects .projects-container .owl-carousel .card :focus-within .card-container .card-body a,
+body .Projects .projects-container .owl-carousel .card :focus-within .card:focus-within .card-container .card-body a {
+  opacity: 1;
 }
 
 @keyframes homeBgtext {
